@@ -1,5 +1,6 @@
 .installed.cfg
 .mr.developer.cfg
+buildout.cfg
 bin
 develop-eggs
 downloads
