@@ -1,0 +1,14 @@
+[buildout]
+develop = .
+parts = test
+
+versions = versions
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = ftw.recipe.deployment [tests]
+
+[versions]
+zc.buildout = 1.7.1
+zc.recipe.egg = 1.3.2
+setuptools = 0.6c11
