@@ -1,8 +1,0 @@
-[buildout]
-extends =
-    https://raw.github.com/4teamwork/ftw-buildouts/master/test-package.cfg
-    http://dist.plone.org/release/4-latest/versions.cfg
-
-jenkins_python = $PYTHON26
-
-package-name = ftw.recipe.deployment
